Fix regression bug 380842: allow block-display generated content on table cellsand captions again.  r+sr=dbaron